From 6a21515 (ephemeris):
========================

In scripts/run_prisim.py,

(*) Add hooks to improve ephemeris in conversion of ROI center alt-az
to RA-Dec, but still commented just to act as a placeholder

From d2d33ae (ephemeris):
========================

In prisim/interferometry.py,

(*) In member function append_settings() of class ROI_parameters,
remove commented lines in the previous commit 

From c46e608 (ephemeris):
========================

In prisim/interferometry.py,

(*) In member function append_settings() of class ROI_parameters,
initialize sky coordinates in FK5 frame instead of ICRS to fix bug in
ephemeris and to be consistent with ephemeris calculations in
scripts/run_prisim.py
(*) In member function append_settings() of class ROI_parameters,
comment out the previous initialization of sky coords in ICRS frame

In scripts/run_prisim.py,

(*) Add a comment to clarify the intention behind computing of the
variable roi_center_hadec

From 07e1117 (master):
=====================

In scripts/run_prisim.py,

(*) Modify DSM to be read from the default file independent of the
'freq' parameter and simply use spectral index to extrapolate to
any frequency. Make this update for skymodel when set to 'dsm', 'gsm'
or 'usm'

From dade112 (pyuvdata):
=======================

In prisim/interferometry.py,

(*) In member function save() of class InterferometerArray, fix bug
in writing the correct attribute for projected_baselines, wherein
earlier it only wrote baselines attribute wrongly in place of the
projected_baselines attribute

In scripts/make_redundant_visibilities.py,

(*) Insert a comment that can temporarily fix the bug that was saving
incorrect projected_baselines (see above), which will be a
placeholder until all simulations have got this bug fixed in them

From d9ddcd8 (pyuvdata):
=======================

In scripts/make_redundant_visibilities.py,

(*) Update to save redundant visibilities in UVFITS format